src/python/webapp/home/home_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: web-app
spec:
  selector:
    matchLabels:
      app: home
  replicas: 1
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: arieltar/flask-home
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
