src/python/webapp/home/home_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-svc
  namespace: web-app
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
